syntax = "proto3";

package compute;

import "operators/operators.proto";

service Compute {
    rpc CreateComputation (CreateComputationRequest) returns (ComputationStatusResponse) {}
    rpc GetComputationStatus (ComputationStatusRequest) returns (ComputationStatusResponse) {}
}

message CreateComputationRequest {
    string root_operator_id = 1;
    map<string, operators.Operator> operator_map = 2;
}

message ComputationStatusRequest {
    string computation_id = 1;
}

message ComputationStatusResponse {
    string computation_id = 1;
    string status = 2;
}
