syntax = "proto3";

package operators;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "geometry/geometry.proto";


service Operators {
    rpc List (ListOperatorsRequest) returns (ListOperatorsResponse) {
        option (google.api.http) = {
            get: "/v1/operators"
        };
    }
    rpc Get (GetOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            get: "/v1/operators/{id}"
        };
    }
    rpc Create (CreateOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            post: "/v1/operators"
            body: "operator"
        };
    }
    rpc Update (UpdateOperatorRequest) returns (Operator) {
        option (google.api.http) = {
            put: "/v1/operators/{id}"
            body: "operator"
        };
    }
    rpc Delete (DeleteOperatorRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/operators/{id}"
        };
    }
    rpc Render (RenderOperatorRequest) returns (RenderOperatorResponse) {
        option (google.api.http) = {
            post: "/v1/operators/{id}/render"
            body: ""
        };
    }
    // Compute Processor uses this RPC to render
    // No HTTP on purpose
    rpc GetRenderParameters (RenderParameterRequest) returns (RenderParameter) {}
}

message Operator {
    string id = 1;
    string scene_id = 2;
    string type = 3;
    string name = 4;
    string context = 5;
    repeated string inputs = 6;
    bytes parameter_root = 7;
}

message ListOperatorsRequest {
    int32 page_size = 1;
    string page_token = 2;
}

message ListOperatorsResponse {
    repeated Operator operators = 1;
    string next_page_token = 2;
}

message GetOperatorRequest {
    string id = 1;
}

message CreateOperatorRequest {
    Operator operator = 1;
}

message UpdateOperatorRequest {
    string id = 1;
    Operator operator = 2;
}

message DeleteOperatorRequest {
    string id = 1;
}

message RenderOperatorRequest {
    string id = 1;
    double time = 2;
    geometry.BoundingBox2D bounding_box = 3;
}

message RenderOperatorResponse {
    string result_url = 1;
    string result_type = 2;
}

message RenderParameterRequest {
    string operator_key = 1;
    double time = 2;
}

message RenderParameter {
    string type = 1;
    // JSON field that varies by parameter type
    bytes configuration = 2;
    repeated RenderParameter inputs = 3;
}
